update cv needs more work though

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@
   authors: Haihan Lin, Derya Akbaba, Miriah Meyer, Alexander Lex
   journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2023
-  links: a href="https://ieeexplore.ieee.org/document/9903288">paper</a> <a
+  links: <a href="https://ieeexplore.ieee.org/document/9903288">paper</a> <a
     href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
     href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a>
 - title: Manifesto for Putting 'Chartjunk' in the Trash 2021!
