--- a/_data/otherpubs.yml
+++ b/_data/otherpubs.yml
@@ -3,19 +3,23 @@
   authors: Derya Akbaba, Kiran Gadhave
   journal: Visualization Design Lab Blog
   year: 2021
+  date: 11-2021
   links: <a href="https://vdl.sci.utah.edu/blog/2021/12/08/fair-pay-panel/">blog post</a>
 - title: Manifesto for Putting Chartjunk in the Trash 2021!
   authors: Derya Akbaba, Jack Wilburn, Miriah Meyer
   journal: Visualization Design Lab Blog
   year: 2021
+  date: 10-2021
   links: <a href="https://vdl.sci.utah.edu/blog/2021/09/19/chartjunk/">blog post</a>
 - title: "Visualizing Uncertainty: What can graphics convey about the character of data?"
   authors: Derya Akbaba
   journal: Natural History Magazine
   year: 2020
+  date: 11-2020
   links: <a href="http://127.0.0.1:4000/assets/papers/Sep20-NH-digital-edition.pdf">personal copy of article</a>
 - title: State COVID-19 Dashboard
   authors: Derya Akbaba
   journal: Visualization Design Lab Blog
-  year: 2021
+  year: 2020
+  date: 10-2020
   links: <a href="https://vdl.sci.utah.edu/blog/2020/07/20/state-dashboards/">blog post</a>
