--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -4,7 +4,7 @@
   role: Teaching Assistant
 - school: University of Utah
   course: "Advised: Pranav Rajan"
-  year: 2020
+  year: S2021
   role: Undergraduate Student Advisor
 - school: Linköping University
   course: "TDDE39: Physical Interaction Design and Prototyping"
