--- a/_data/otherpubs.yml
+++ b/_data/otherpubs.yml
@@ -22,4 +22,4 @@
   journal: Visualization Design Lab Blog
   year: 2020
   date: 10-2020
-  links: <a href="https://vdl.sci.utah.edu/blog/2020/07/20/state-dashboards/">blog post</a>
+  links: <a href="https://vdl.sci.utah.edu/blog/2020/07/20/state-dashboards/">blog post</a> & cited in <a href="https://press.princeton.edu/books/paperback/9780691208053/a-city-is-not-a-computer">A City is Not a Computer</a>
