Add dancing drawings

--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -6,6 +6,7 @@
   date: 10-2023
   links: <a href="https://osf.io/h793u/">pre-print</a> <a
     href="https://gotdairyya.github.io/pair-interview-primer/mechanics/">supplemental material</a>
+  image: 2023-pairinterviews.png
 - title: Manifesto for Putting 'Chartjunk' in the Trash 2021!
   authors: Derya Akbaba, Jack Wilburn, Main T. Nance, Miriah Meyer
   journal: alt.VIS, a workshop co-located with IEEE VIS
@@ -14,6 +15,7 @@
   links:
     <a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://chartjunk.art/">performance
     art as website</a>
+  image: 2023-chartjunk.png
 - title: "I Was Here: Digital Traces as Design Material"
   authors: Tobias Kauer, Derya Akbaba
   journal: Information+ Conference
@@ -26,6 +28,7 @@
   year: 2021
   date: 11-2021
   links: <a href="https://informationplusconference.com/2021/">conference</a> <a href="https://viscollective.github.io/publications/2021_infoplus_feminist/">abstract</a> <a href="https://vimeo.com/592256059">⚡ talk</a>
+  image: 2021-infoplus.png
 - title: "words matter || mattering words"
   authors: Derya Akbaba
   journal: "CSCW Workshop. A Toolbox of Feminist Wonder: Theories and methods that can make a difference"
