--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -8,6 +8,7 @@
     <a href="https://dl.acm.org/doi/abs/10.1145/3544548.3581168">paper</a> <a
     href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
     href="https://osf.io/cvrbs/">supplemental material</a>
+  image: 2023-care.png
 - title: "Data Hunches: Incorporating Personal Knowledge into Visualizations"
   authors: Haihan Lin, Derya Akbaba, Miriah Meyer, Alexander Lex
   journal: IEEE Transactions on Visualization and Computer Graphics
@@ -16,3 +17,4 @@
   links: <a href="https://ieeexplore.ieee.org/document/9903288">paper</a> <a
     href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
     href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a>
+  image: 2023-datahunches.png
