--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -1,9 +1,9 @@
 ---
-- title: '"Two Heads are Better than One": Pair-Interviews for Visualization'
+- title: "'Two Heads are Better than One': Pair-Interviews for Visualization"
   authors: Derya Akbaba, Miriah Meyer
   journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2023
-  date: 10-2023
+  date: 2023-10
   links: <a href="https://osf.io/h793u/">pre-print</a> <a
     href="https://gotdairyya.github.io/pair-interview-primer/mechanics/">supplemental material</a>
   image: 2023-pairinterviews.png
@@ -11,7 +11,7 @@
   authors: Derya Akbaba, Jack Wilburn, Main T. Nance, Miriah Meyer
   journal: alt.VIS, a workshop co-located with IEEE VIS
   year: 2021
-  date: 10-2021
+  date: 2021-10
   links:
     <a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://chartjunk.art/">performance
     art as website</a>
@@ -20,24 +20,24 @@
   authors: Tobias Kauer, Derya Akbaba
   journal: Information+ Conference
   year: 2023
-  date: 11-2023
+  date: 2023-11
   links: <a href="https://informationplusconference.com/2023/">conference</a> <a href="https://viscollective.github.io/publications/2023_infoplus_trace/">abstract</a>
 - title: Reflections on applying feminist theory to visualization research
   authors: Derya Akbaba, Lauren Klein, Miriah Meyer
   journal: Information+ Conference
   year: 2021
-  date: 11-2021
+  date: 2021-11
   links: <a href="https://informationplusconference.com/2021/">conference</a> <a href="https://viscollective.github.io/publications/2021_infoplus_feminist/">abstract</a> <a href="https://vimeo.com/592256059">⚡ talk</a>
   image: 2021-infoplus.png
 - title: "words matter || mattering words"
   authors: Derya Akbaba
   journal: "CSCW Workshop. A Toolbox of Feminist Wonder: Theories and methods that can make a difference"
   year: 2023
-  date: 9-2023
+  date: 2023-09
   links: <a href="https://blogg.sh.se/a-toolbox-of-feminist-wonder/">workshop</a>
 - title: "A speculative feminist knowledge elicitation system"
   authors: "Derya Akbaba*, Eirini Kaklopoulou *"
   journal: "Workshop at AI for Humanity and Society 2023"
   year: 2023
-  date: 11-2023
+  date: 2023-11
   links: <a href="https://wasp-hs.org/event/ai-for-humanity-and-society-2023/">workshop</a> *both authors contributed equally
