--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -34,7 +34,7 @@
   journal: "CSCW Workshop. A Toolbox of Feminist Wonder: Theories and methods that can make a difference"
   year: 2023
   date: 2023-09
-  links: <a href="https://blogg.sh.se/a-toolbox-of-feminist-wonder/">workshop</a>
+  links: <a href="https://blogg.sh.se/a-toolbox-of-feminist-wonder/">workshop</a>, <a href="https://dl.acm.org/doi/abs/10.1145/3584931.3611295">proceedings</a>
 - title: "A speculative feminist knowledge elicitation system"
   authors: "Derya Akbaba*, Eirini Kaklopoulou *"
   journal: "Workshop at AI for Humanity and Society 2023"
