Update CV and talks

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -9,3 +9,18 @@
   year: 2023
   date: 5-2023
   journal: Copenhagen, Denmark
+- title: "Staying with the trouble: Applying feminism to visualisation research"
+  authors: HCC group & Women in Science Science @ King's College
+  year: 2023
+  date: 11-2023
+  journal: London, UK
+- title: "Staying with the trouble: Applying feminism to visualisation research"
+  authors: giCentre @ City, University of London
+  year: 2023
+  date: 11-2023
+  journal: London, UK
+- title: "Staying with the trouble: Applying feminism to visualisation research"
+  authors: CIM @ University of Warwick
+  year: 2023
+  date: 11-2023
+  journal: Coventry, UK
