--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,26 +1,26 @@
 ---
 - title: Interactive Visualizations in Social Science Networks
-  authors: Polarization Lab @ Duke University
-  year: 2021
+  organization: Polarization Lab @ Duke University
+  year: Sept 2021
   date: 9-2021
-  journal: Durham, North Carolina
+  country: USA
 - title: "Troubling Collaboration: Matters of Care in Visualization Design Study"
-  authors: HCDS group & hdilab @ ITU Copenhagen
-  year: 2023
+  organization: HCDS group & hdilab @ ITU Copenhagen
+  year: May 2023
   date: 5-2023
-  journal: Copenhagen, Denmark
+  country: Denmark
 - title: "Staying with the trouble: Applying feminism to visualisation research"
-  authors: HCC group & Women in Science Science @ King's College
-  year: 2023
+  organization: HCC group & Women in Science Science @ King's College
+  year: Nov 2023
   date: 11-2023
-  journal: London, UK
+  country: UK
 - title: "Staying with the trouble: Applying feminism to visualisation research"
-  authors: giCentre @ City, University of London
-  year: 2023
+  organization: giCentre @ City, University of London
+  year: Nov 2023
   date: 11-2023
-  journal: London, UK
+  country: UK
 - title: "Staying with the trouble: Applying feminism to visualisation research"
-  authors: CIM @ University of Warwick
-  year: 2023
+  organization: CIM @ University of Warwick
+  year: Nov 2023
   date: 11-2023
-  journal: Coventry, UK
+  country: UK
