--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -10,7 +10,7 @@
   date: 5-2023
   country: Denmark
 - title: "Staying with the trouble: Applying feminism to visualisation research"
-  organization: HCC group & Women in Science Science @ King's College
+  organization: HCC group & Women in Science @ King's College
   year: Nov 2023
   date: 11-2023
   country: UK
