--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -4,7 +4,7 @@
   journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2023
   date: 2023-10
-  links: <a href="https://osf.io/h793u/">pre-print</a> <a
+  links: <a href="https://ieeexplore.ieee.org/document/10360901">paper</a> <a
     href="https://gotdairyya.github.io/pair-interview-primer/mechanics/">supplemental material</a>
   image: 2023-pairinterviews.png
 - title: Manifesto for Putting 'Chartjunk' in the Trash 2021!
