New year update

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -26,3 +26,8 @@
   news:
     Presenting <em>I Was Here. Digital Traces as Design Material</em> with Tobias Kauer at <a
     href="https://informationplusconference.com/2023/">Info+</a> in Edinburgh.
+- date: 2024-02-06
+  place: virtual
+  news:
+    Giving a workshop on <em>Feminist Data Visualization</em> as part of the Beautiful Data, <a
+    href="https://graphichunters.nl/">Graphic Hunters</a>, workshop series.
