--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -24,3 +24,8 @@
   year: Nov 2023
   date: 11-2023
   country: UK
+- title: Feminist Data Visualization
+  organization: Beautiful Data @ Graphic Hunters
+  country: virtual
+  year: Feb 2024
+  date: 2-2024
