--- a/_data/reviewing.yml
+++ b/_data/reviewing.yml
@@ -1,6 +1,6 @@
 ---
 - venue:
-  year: "Full Papers ('22, '23), alt.vis ('22, '23)"
+  year: "Full Papers ('22, '23, '24'), alt.vis ('22, '23)"
   role: IEEE VIS
 - venue:
   year: "Journal ('23)"
