--- a/_data/service.yml
+++ b/_data/service.yml
@@ -17,3 +17,9 @@
 - venue: College of Engineering Diversity Committee, U. of Utah
   year: 2020
   role: Grad Representative
+- venue: "VISions of the Future: Workshop on Sustainable Practices within Visualization and Physicalisation"
+  year: 2024
+  role: Organizing Committee
+- venue: <a href="https://www.computer.org/digital-library/magazines/cg/critical-data-visualization">CG&A Special Issue on Critical Data Visualization</a>
+  year: 2024
+  role: Guest Editor
