Add updated news and CV items

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -31,3 +31,10 @@
   news:
     Giving a workshop on <em>Feminist Data Visualization</em> as part of the Beautiful Data, <a
     href="https://graphichunters.nl/">Graphic Hunters</a>, workshop series.
+- date: 2024-04-11
+  place: Sweden
+  news: Presented my half-time seminar (similar to quals in the US)! One step closer to graduating! :)
+- date: 2024-05-26
+  place: Denmark
+  news: Student volunteering at <a
+    href="https://event.sdu.dk/eurovis">EuroVis 2024</a> in Odense, Denmark.
