--- a/_data/service.yml
+++ b/_data/service.yml
@@ -17,9 +17,12 @@
 - venue: College of Engineering Diversity Committee, U. of Utah
   year: 2020
   role: Grad Representative
-- venue: "VISions of the Future: Workshop on Sustainable Practices within Visualization and Physicalisation"
+- venue: "<a href='https://visionsofthefuture.github.io/'>VISions of the Future: Workshop on Sustainable Practices within Visualization and Physicalisation</a>"
   year: 2024
   role: Organizing Committee
 - venue: <a href="https://www.computer.org/digital-library/magazines/cg/critical-data-visualization">CG&A Special Issue on Critical Data Visualization</a>
   year: 2024
   role: Guest Editor
+- venue: <a href="https://event.sdu.dk/eurovis">EuroVis</a>
+  year: 2024
+  role: Student Volunteer
