--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -29,3 +29,8 @@
   journal: New York, New York
   year: 2019
   date: 1-2019
+- title: "NORDES Summer School: Socio-ecologically Just Design after Progress"
+  authors: <a href="https://nordes.org/">NORDES</a>
+  journal: Norrköping, Sweden
+  year: 2024
+  date: 8-2024
