--- a/_data/news.yml
+++ b/_data/news.yml
@@ -38,3 +38,7 @@
   place: Denmark
   news: Student volunteering at <a
     href="https://event.sdu.dk/eurovis">EuroVis 2024</a> in Odense, Denmark.
+- date: 2024-08-26
+  place: Sweden
+  news: Excited to join the <a
+    href="https://nordes.org/">NORDES</a>summer school where we will focus on socio-ecologically just design theories and practice.
