--- a/_data/news.yml
+++ b/_data/news.yml
@@ -42,3 +42,8 @@
   place: Sweden
   news: Excited to join the <a
     href="https://nordes.org/">NORDES</a> summer school where we will focus on socio-ecologically just design theories and practice.
+- date: 2024-10-15
+  place: USA
+  news: Two of my papers have been accepted for VIS24! Checkout the preprints <a
+    href="https://osf.io/preprints/osf/rw35g">Entanglements</a> and <a
+    href="https://arxiv.org/abs/2407.17994">Viscussion</a>
