--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -18,3 +18,18 @@
     href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
     href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a>
   image: 2023-datahunches.png
+- title: "Entanglements for Visualization: Changing Research Outcomes through Feminist Theory"
+  authors: Derya Akbaba, Lauren Klein, Miriah Meyer
+  journal: to be published, IEEE Transactions on Visualization and Computer Graphics
+  year: 2024
+  date: 2024-10
+  links: <a href="https://osf.io/preprints/osf/rw35g">pre-print</a> <a
+    href="https://osf.io/ubrdy/">supplemental material</a>
+  image:
+- title: "Discursive Patinas: Anchoring Discussions in Data Visualizations"
+  authors: Tobias Kauer, Derya Akbaba, Marian Dörk, Benjamin Bach
+  journal: to be published, IEEE Transactions on Visualization and Computer Graphics
+  year: 2024
+  date: 2024-09
+  links: <a href="https://arxiv.org/abs/2407.17994">pre-print</a>
+  image:
