--- a/_data/service.yml
+++ b/_data/service.yml
@@ -22,7 +22,7 @@
   role: Organizing Committee
 - venue: <a href="https://www.computer.org/digital-library/magazines/cg/critical-data-visualization">CG&A Special Issue on Critical Data Visualization</a>
   year: 2024
-  role: Guest Editor
+  role: Editor
 - venue: <a href="https://event.sdu.dk/eurovis">EuroVis</a>
   year: 2024
   role: Student Volunteer
