Best Paper award

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -47,3 +47,7 @@
   news: Two of my papers have been accepted for VIS24! Checkout the preprints <a
     href="https://osf.io/preprints/osf/rw35g">Entanglements</a> and <a
     href="https://arxiv.org/abs/2407.17994">Viscussion</a>
+- date: 2024-10-15
+  place: USA
+  news: <a
+    href="https://osf.io/preprints/osf/rw35g">Entanglements for Visualization</a> received the best paper award! 😱
