--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -26,7 +26,7 @@
   links: <a href="https://osf.io/preprints/osf/rw35g">pre-print</a> <a
     href="https://osf.io/ubrdy/">supplemental material</a>
   image:
-  award: 🥛 Best Paper (Top 4% of papers)
+  award: 🥛 2024 VIS Best Paper Award (Top 4% of papers)
 - title: "Discursive Patinas: Anchoring Discussions in Data Visualizations"
   authors: Tobias Kauer, Derya Akbaba, Marian Dörk, Benjamin Bach
   journal: to be published, IEEE Transactions on Visualization and Computer Graphics
