Update interactive cv

--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -34,3 +34,13 @@
   journal: Norrköping, Sweden
   year: 2024
   date: 8-2024
+- title: "Digital STS Hub Working Group"
+  authors: <a href="https://www.chalmers.se/en/departments/tme/research/science-technology-and-society/the-digital-sts-hub/">The Digital STS Hub</a>
+  journal: Sweden
+  year: 2024
+  date: 1-2024
+- title: "Feminist Wonder Working Group"
+  authors: <a href="https://blogg.sh.se/a-toolbox-of-feminist-wonder/">A Toolbox of Feminist Wonder</a>
+  journal: virtual
+  year: 2024
+  date: 1-2024
