--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -37,7 +37,7 @@
   links: <a href="https://blogg.sh.se/a-toolbox-of-feminist-wonder/">workshop</a>, <a href="https://dl.acm.org/doi/abs/10.1145/3584931.3611295">proceedings</a>
 - title: "A speculative feminist knowledge elicitation system"
   authors: "Derya Akbaba*, Eirini Kaklopoulou *"
-  journal: "Workshop at AI for Humanity and Society 2023"
+  journal: "Workshop at AI for Humanity and Society"
   year: 2023
   date: 2023-11
   links: <a href="https://wasp-hs.org/event/ai-for-humanity-and-society-2023/">workshop</a> *both authors contributed equally
