--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -29,8 +29,8 @@
   award: 🥛 2024 VIS Best Paper Award (Top 1% of papers)
 - title: "Discursive Patinas: Anchoring Discussions in Data Visualizations"
   authors: Tobias Kauer, Derya Akbaba, Marian Dörk, Benjamin Bach
-  journal: to be published, IEEE Transactions on Visualization and Computer Graphics
+  journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2024
   date: 2024-09
-  links: <a href="https://arxiv.org/abs/2407.17994">pre-print</a>
+  links: <a href="https://ieeexplore.ieee.org/document/10670254">paper</a>
   image:
