Update chartjunk website link

--- a/_data/shortpubs.yml
+++ b/_data/shortpubs.yml
@@ -13,7 +13,7 @@
   year: 2021
   date: 2021-10
   links:
-    <a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://chartjunk.art/">performance
+    <a href="https://altvis.github.io/papers/2021/akbaba.pdf">paper</a> <a href="https://jackwilb.github.io/chart-junk//">performance
     art as website</a>
   image: 2023-chartjunk.png
 - title: "I Was Here: Digital Traces as Design Material"
