Update pub links

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -23,7 +23,7 @@
   journal: to be published, IEEE Transactions on Visualization and Computer Graphics
   year: 2024
   date: 2024-10
-  links: <a href="https://osf.io/preprints/osf/rw35g">pre-print</a> <a
+  links: <a href="https://ieeexplore.ieee.org/document/10670254">paper</a> <a
     href="https://osf.io/ubrdy/">supplemental material</a>
   image:
   award: 🥛 2024 VIS Best Paper Award (Top 1% of papers)
@@ -32,5 +32,5 @@
   journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2024
   date: 2024-09
-  links: <a href="https://ieeexplore.ieee.org/document/10670254">paper</a>
+  links: <a href="https://ieeexplore.ieee.org/document/10679900">paper</a>
   image:
