--- a/_data/news.yml
+++ b/_data/news.yml
@@ -55,3 +55,6 @@
   place: USA
   news: Presented my work on entanglements at <a
     href="https://www.aiai.network/">Atlanta Interdisciplinary AI Network</a>.
+- date: 2024-11-13
+  place: the Netherlands
+  news: First time visiting the Nertherlands! Will be presenting at <a href="https://cest-la-viz.nl/">CEST-LA-VIS</a> and connecting with VIS folks at Utrecht U and TU Eindhoven.
