--- a/_data/news.yml
+++ b/_data/news.yml
@@ -50,7 +50,7 @@
 - date: 2024-10-15
   place: USA
   news: <a
-    href="https://osf.io/preprints/osf/rw35g">Entanglements for Visualization</a> received the best paper award! 😱
+    href="https://osf.io/preprints/osf/rw35g">Entanglements for Visualization</a> received the best paper award! 🙀
 - date: 2024-10-10
   place: USA
   news: Presented my work on entanglements at <a
