thats a rock fact + talks

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -25,7 +25,7 @@
   date: 2024-10
   links: <a href="https://ieeexplore.ieee.org/document/10670254">paper</a> <a
     href="https://osf.io/ubrdy/">supplemental material</a>
-  image:
+  image: 2024-entanglements.png
   award: 🥛 2024 VIS Best Paper Award (Top 1% of papers)
 - title: "Discursive Patinas: Anchoring Discussions in Data Visualizations"
   authors: Tobias Kauer, Derya Akbaba, Marian Dörk, Benjamin Bach
