--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -29,3 +29,38 @@
   country: virtual
   year: Feb 2024
   date: 2-2024
+- title: Data Empowerment
+  organization: Östergötlands Stadsmission
+  country: Sweden
+  year: Aug 2024
+  date: 8-2024
+- title: "Staying with the Trouble: Applying Feminism to Visualization Research"
+  organization: VDL @ University of Utah
+  country: USA
+  year: Oct 2024
+  date: 10-2024
+- title: "Staying with the Trouble: Applying Feminism to Visualization Research"
+  organization: Atlanta Interdisciplinary Artificial Intelligence Network @ Emory University
+  country: USA
+  year: Oct 2024
+  date: 11-2024
+- title: "Entanglements for Visualization: Changing Research Outcomes through Feminist Theory"
+  organization: Best Paper Session @ IEEE VIS
+  country: virtual
+  year: Oct 2024
+  date: 12-2024
+- title: "Are visualizations haunted?"
+  organization: Cest‑la‑viz Conference
+  country: the Netherlands
+  year: Nov 2024
+  date: 13-2024
+- title: "Responsible Computing: Sketching a different future for vis research"
+  organization: VIS Cluster @ TU Eindhoven
+  country: the Netherlands
+  year: Nov 2024
+  date: 15-2024
+- title: "Responsible Computing: Sketching a different future for vis research"
+  organization: VIG @ TU Eindhoven
+  country: the Netherlands
+  year: Nov 2024
+  date: 14-2024
