--- a/_data/news.yml
+++ b/_data/news.yml
@@ -58,3 +58,6 @@
 - date: 2024-11-13
   place: the Netherlands
   news: First time visiting the Nertherlands! Will be presenting at <a href="https://cest-la-viz.nl/">CEST-LA-VIS</a> and connecting with VIS folks at Utrecht U and TU Eindhoven.
+- date: 2024-12-05
+  place: Sweden
+  news: Super excited to give a talk at KTH's Fancy Formal Friday 🕺
