--- a/_data/news.yml
+++ b/_data/news.yml
@@ -61,3 +61,6 @@
 - date: 2024-12-05
   place: Sweden
   news: Super excited to give a talk at KTH's Fancy Formal Friday 🕺
+- date: 2025-03-04
+  place: Sweden
+  news: Our exhibit Data + Me will launch at the <a href="https://visualiseringscenter.se/en/visit/">Vis.C</a> in March!
