Add info+ talks

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -97,3 +97,19 @@
   video: CHI23
   link: https://youtu.be/-gVr7V2-txM?feature=shared
   order: 2
+- title: "I Was Here: Digital Traces as Digital Material"
+  organization: Info+
+  year: Nov 2023
+  date: 11-2023
+  country: UK
+  video: Info+23
+  link: https://vimeo.com/935141329
+  order: 2
+- title: "Reflections on applying feminist theory to visualization research"
+  organization: Info+
+  year: Oct 2021
+  date: 11-2023
+  country: virtual
+  video: Info+21
+  link: https://vimeo.com/592256059
+  order: 2
