--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -20,7 +20,7 @@
   image: 2023-datahunches.png
 - title: "Entanglements for Visualization: Changing Research Outcomes through Feminist Theory"
   authors: Derya Akbaba, Lauren Klein, Miriah Meyer
-  journal: to be published, IEEE Transactions on Visualization and Computer Graphics
+  journal: IEEE Transactions on Visualization and Computer Graphics
   year: 2024
   date: 2024-10
   links: <a href="https://ieeexplore.ieee.org/document/10670254">paper</a> <a
