--- a/_data/news.yml
+++ b/_data/news.yml
@@ -63,4 +63,4 @@
   news: Super excited to give a talk at KTH's Fancy Formal Friday 🕺
 - date: 2025-03-04
   place: Sweden
-  news: Our exhibit Data + Me will launch at the <a href="https://visualiseringscenter.se/en/visit/">Vis.C</a> in March!
+  news: Our exhibit Data + Me launches March 4 at the <a href="https://visualiseringscenter.se/data-and-me/">Vis.C</a>!
