--- a/_data/reviewing.yml
+++ b/_data/reviewing.yml
@@ -3,6 +3,12 @@
   year: "Full Papers ('22, '23, '24'), alt.vis ('22, '23)"
   role: IEEE VIS
 - venue:
+  year: "Full Papers ('25)"
+  role: ACM DIS
+- venue:
+  year: "Full Papers ('25), alt.chi ('25)"
+  role: ACM CHI
+- venue:
   year: "Journal ('23)"
   role: TVCG
 - venue:
