Update resume and news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -64,3 +64,6 @@
 - date: 2025-03-04
   place: Sweden
   news: Our exhibit Data + Me launches March 4 at the <a href="https://visualiseringscenter.se/data-and-me/">Vis.C</a>!
+- date: 2025-05-20
+  place: Sweden
+  news: Looking forward to 3 day workshop at Digital Futures Focus Period on <a href="https://www.kth.se/femtech">FemTech and Feminist Tech</a> at KTH!
