--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -9,6 +9,7 @@
     href="https://gotdairyya.substack.com/p/grwm-reflecting-on-qualitative-work">blog post</a> <a
     href="https://osf.io/cvrbs/">supplemental material</a>
   image: 2023-care.png
+  project: method
 - title: "Data Hunches: Incorporating Personal Knowledge into Visualizations"
   authors: Haihan Lin, Derya Akbaba, Miriah Meyer, Alexander Lex
   journal: IEEE Transactions on Visualization and Computer Graphics
@@ -18,6 +19,7 @@
     href="http://vdl.sci.utah.edu/data-hunch/">interactive prototype</a> <a
     href="https://vdl.sci.utah.edu/publications/2022_vis_data_hunches/">supplemental material</a>
   image: 2023-datahunches.png
+  project: theory, design
 - title: "Entanglements for Visualization: Changing Research Outcomes through Feminist Theory"
   authors: Derya Akbaba, Lauren Klein, Miriah Meyer
   journal: IEEE Transactions on Visualization and Computer Graphics
@@ -27,6 +29,7 @@
     href="https://osf.io/ubrdy/">supplemental material</a>
   image: 2024-entanglements.png
   award: 🥛 2024 VIS Best Paper Award (Top 1% of papers)
+  project: theory
 - title: "Discursive Patinas: Anchoring Discussions in Data Visualizations"
   authors: Tobias Kauer, Derya Akbaba, Marian Dörk, Benjamin Bach
   journal: IEEE Transactions on Visualization and Computer Graphics
@@ -34,3 +37,4 @@
   date: 2024-09
   links: <a href="https://ieeexplore.ieee.org/document/10679900">paper</a>
   image:
+  project: design
