--- a/_data/news.yml
+++ b/_data/news.yml
@@ -67,3 +67,6 @@
 - date: 2025-05-20
   place: Sweden
   news: Looking forward to 3 day workshop at Digital Futures Focus Period on <a href="https://www.kth.se/femtech">FemTech and Feminist Tech</a> at KTH!
+- date: 2025-06-05
+  place: Finland
+  news: Wow! Excited to present 'Care, Craft, & Complexity' at the <a href="https://vizknowledge.aalto.fi/">Visualizing Knowledge Conf</a>! It'll be my first time visiting Finland!
