--- a/_data/news.yml
+++ b/_data/news.yml
@@ -70,3 +70,6 @@
 - date: 2025-06-05
   place: Finland
   news: Wow! Excited to present 'Care, Craft, & Complexity' at the <a href="https://vizknowledge.aalto.fi/">Visualizing Knowledge Conf</a>! It'll be my first time visiting Finland!
+- date: 2025-09-04
+  place: Sweden
+  news: I will defend 4 Sept! You can find my thesis, <a href="https://urn.kb.se/resolve?urn=urn:nbn:se:liu:diva-214083">Shifting Perspectives; Conducting Visualization Research with Entanglement Epistemology</a> online.
