--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -113,3 +113,19 @@
   video: Info+21
   link: https://vimeo.com/592256059
   order: 2
+- title: "Exploring New Threads in Visualization Research"
+  organization: Lecture Series @ ITU Copenhagen
+  country: Denmark
+  year: June 2025
+  date: 07-2027
+  video:
+  link:
+  order: 10
+- title: "Care, Craft, & Complexity"
+  organization: Visualizing Knowledge Conference
+  country: Finlad
+  year: June 2025
+  date: 07-2027
+  video:
+  link:
+  order: 11
