Add autumn news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -73,3 +73,6 @@
 - date: 2025-09-04
   place: Sweden
   news: I successfully defended my PhD on 4 Sept! You can find my thesis, <a href="https://urn.kb.se/resolve?urn=urn:nbn:se:liu:diva-214083">Shifting Perspectives; Conducting Visualization Research with Entanglement Epistemology</a> online.
+- date: 2025-11-04
+  place: the Netherlands, Austria, Sweden
+  news: Lots of fun news to share for this autumn! I'll be sharing data vis methods at <a href="https://www.motrayl.com/">Mapping as a Social Science Method</a> at Maatricht University. Then off to IEEE VIS conf -- come to the <a href="https://inputvisualization.github.io/vis2025/"> Input Vis Workshop</a> and listen to our <a href="https://www.visdesignlab.net/publications/2025_vis_data_hunch_interview/">Best Paper Honorable Mention</a> talk! Finally, I am starting a new role at KTH Royal Institute as a member of the <a href="https://co-liberative-computing.github.io/about/">Co-liberative Computing</a> research group.
