--- a/_data/reviewing.yml
+++ b/_data/reviewing.yml
@@ -6,10 +6,10 @@
   year: "Full Papers ('25)"
   role: ACM DIS
 - venue:
-  year: "Full Papers ('25), alt.chi ('25)"
+  year: "Full Papers ('26, '25), alt.chi ('25)"
   role: ACM CHI
 - venue:
-  year: "Journal ('23)"
+  year: "Journal ('25, '23)"
   role: TVCG
 - venue:
   year: "Journal ('24)"
