--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -23,3 +23,8 @@
   year: 2024
   semester: S24
   role: Master Thesis Advisor
+- school: KTH Royal Institute of Technology
+  course: "FID3216: Data Feminism"
+  year: 2024
+  semester: F24, F25
+  role: Applications of Feminist Theory Seminar
